[gd_scene load_steps=11 format=3 uid="uid://d2tbsvt5jity4"]

[ext_resource type="Script" path="res://player.gd" id="1_ci60j"]
[ext_resource type="Script" path="res://StateMachine.gd" id="2_7cgal"]
[ext_resource type="Script" path="res://Idle.gd" id="3_dk2l8"]
[ext_resource type="Script" path="res://Air.gd" id="4_m3v81"]
[ext_resource type="Script" path="res://Walk.gd" id="5_jdyjm"]
[ext_resource type="Script" path="res://Mach1.gd" id="6_tjxxt"]
[ext_resource type="Script" path="res://Mach2.gd" id="7_p1evq"]
[ext_resource type="Script" path="res://Mach3.gd" id="8_23eqv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rcdlh"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0lfjq"]

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_ci60j")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_rcdlh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_0lfjq")

[node name="CameraBase" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraBase"]
transform = Transform3D(1, 0, 0, 0, 0.928025, 0.372518, 0, -0.372518, 0.928025, 0.170808, 2.6832, 4.71149)

[node name="buffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="coyote" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Mach2" type="Timer" parent="."]
one_shot = true

[node name="Mach3" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_7cgal")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_dk2l8")

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource("4_m3v81")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_jdyjm")

[node name="Mach1" type="Node" parent="StateMachine"]
script = ExtResource("6_tjxxt")

[node name="Mach2" type="Node" parent="StateMachine"]
script = ExtResource("7_p1evq")

[node name="Mach3" type="Node" parent="StateMachine"]
script = ExtResource("8_23eqv")
